--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@mantine/core": "^6.0.13",
+    "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
     "@mantine/modals": "^6.0.13",
     "@mantine/next": "^6.0.13",
