--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/next": "^6.0.13",
     "@mantine/nprogress": "^6.0.13",
     "@react-oauth/google": "^0.11.0",
+    "@tabler/icons-react": "^2.21.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
