--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@mantine/nprogress": "^6.0.13",
     "@react-oauth/google": "^0.11.0",
     "@tabler/icons-react": "^2.21.0",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11"
